crates/toml/tests/snapshots/invalid/ext/string/bad-escape-6.stderr
TOML parse error at line 1, column 9
  |
1 | foo = "\"
  |         ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
